# SLM

./: .gitignore  .mcp.json  AGENTS.md  BRAINLIFT.md  CONTEXT.md  HANDOFF.md  Makefile  OVERNIGHT_SFT_REPORT.md  README.md  pyproject.toml  sft_improve_ledger.json
cli/: __init__.py  prompt_to_lut.py
configs/: candidate_distill.json  candidate_grpo.json  candidate_hybrid.json  candidate_interpreter.json  candidate_interpreter_intensity.json  candidate_one_stage_current.json  candidate_two_stage.json  candidate_two_stage_augmax.json  candidate_two_stage_bucketized.json  candidate_two_stage_softloss.json  interpreter_default.yaml  leakage_thresholds.yaml  model_clients.yaml  renderer_baseline.yaml  sft_default.yaml  source_inventory.yaml  staging_default.yaml  webapp.json
data/: run_summary_prereaudit.json  run_summary_v1_backup.json  run_summary_v2_backup.json
data_pipeline/: __init__.py  active_dataset.py  attribute_spec.py  behavior_vector.py  canonicalize.py  captioning.py  constants.py  embeddings.py  errors.py  eval_sets.py  freeze_split.py  instruction_gen.py  leakage.py  lut_ops.py  paths.py  quality_filters.py  registry.py  representability.py  run_pipeline.py  selection.py  source_inventory.py  splits.py  tokenize_targets.py  unsupported_gen.py  warmup.py
deploy/: modal_app.py
docs/: AUDIT_claude_codex_prompt_to_lut.md  attribute_spec.md  behavior_spec.md  data_collection_plan.md  detailed_behavior_spec.md  eval_harness_implementation.md  frontier_baseline_results.md  interpreter_results.md  lut_methodology_improvement_plan.md  master_plan.md  model_architecture.md  project spec.md  runbook_colab_sft_readiness.md  runbook_cursor_colab_ext_sft_readiness.md  training_plan_colab.md
eval/: __init__.py  baseline_adapters.py  behavioral_fidelity.py  best_of_n.py  color_pipeline.py  constrained_decoding.py  cube_io.py  cube_parser.py  deterministic_checks.py  fast_reward.py  frontier_client.py  frontier_scoring.py  grpo_reward.py  instruction_quality.py  judge_client.py  lut_decoder.py  openai_compat.py  oracle_at_n.py  output_parsers.py  refuse_taxonomy.py  report.py  run_eval.py  run_frontier_eval.py  schemas.py  stats.py  tag_vocabulary.py  target_fidelity.py  unsupported_metrics.py  vocab.py
examples/: diagnose_tail.py  freeze_with_exception.py  gate_and_freeze_best.py  hf_upload_corpus.py  score_tokenizer.py  (+1 more)
(+344 files in other folders)
